--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 <body>
 	<h1>Client Side for the Dice Roller</h1>
 
-	<button class="button" onclick="testMERNaServerConnection(url)">Ping Server</button>
+	<button class="button" onclick="testMERNaServerConnection()">Ping Server</button>
 	<div id="ping"></div>
 
-	<button class="button" onclick="fetchRollD6(url)">Roll D6</button>
+	<button class="button" onclick="fetchRollD6()">Roll D6</button>
 	<div id="fetch-rollD6-result"></div>
 	<br><br>
 
 		<script>
-			const url = "https://node-dice-roller-inclass-g3b7f5hbf4b4c4hk.centralus-01.azurewebsites.net"
-			async function testMERNaServerConnection(url) {
+			// const url = "https://node-dice-roller-inclass-g3b7f5hbf4b4c4hk.centralus-01.azurewebsites.net"
+			async function testMERNaServerConnection() {
 				const pingField = document.getElementById("ping");
 				pingField.innerHTML = "";
 				var div = document.getElementById('testingDiv');
 				div.style.display = 'none';
 
 				// const url = "https://node-dice-roller-inclass-g3b7f5hbf4b4c4hk.centralus-01.azurewebsites.net" + "/api/ping";
-				const response = await fetch(url);
+				const response = await fetch("https://node-dice-roller-inclass-g3b7f5hbf4b4c4hk.centralus-01.azurewebsites.net");
 				const pingResponse = await response.text();
 
 				if (pingResponse === 'ping response') {
@@ -36,21 +36,21 @@
 				} 
 			}
 
-			testMERNaServerConnection(url)
+			testMERNaServerConnection()
 	
 			let fetchAboutCounter = 0
-			async function fetchAbout(url) {
+			async function fetchAbout() {
 				fetchAboutCounter++
-				const url = document.getElementById(url).value + "/about";
+				const url = document.getElementById("https://node-dice-roller-inclass-g3b7f5hbf4b4c4hk.centralus-01.azurewebsites.net").value + "/about";
 				const response = await fetch(url)
 				const responseText = await response.text()
 				document.getElementById("fetch-about-result").innerHTML = responseText + " ("+fetchAboutCounter+")"
 			}
 
 			let rollCounter = 0
-			async function fetchRollD6(url) {
+			async function fetchRollD6() {
 				rollCounter++
-				const response = await fetch(url).value + "/rollD6";
+				const response = await fetch("https://node-dice-roller-inclass-g3b7f5hbf4b4c4hk.centralus-01.azurewebsites.net").value + "/rollD6";
 				const responseText = await response.text()
 				document.getElementById("fetch-rollD6-result").innerHTML = responseText
 			}
