--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 		<div id="fetch-about-result"></div>
 		<br><br>
 
-		<button type="button" onclick="fetchRollD6()">Fetch 2plus2</button>
-		<div id="fetch-2plus2-result"></div>
+		<button type="button" onclick="fetchRollD6()">Roll D6</button>
+		<div id="fetch-rollD6-result"></div>
 		<br><br>
 
 		Add two integers on the Node.js server.<br />
@@ -89,12 +89,13 @@
 			}
 
 			let rollCounter = 0
-		async function fetchRollD6() {
-			rollCounter++
-			const response = await fetch("urlInput").value + "/rollD6"
-			const responseText = await response.text()
-			document.getElementById("fetch-rollD6-result").innerHTML = responseText
-		}
+			async function fetchRollD6() {
+				rollCounter++
+				const url = document.getElementById("urlInput").value + "/rollD6";
+				const response = await fetch(url)
+				const responseText = await response.text()
+				document.getElementById("fetch-rollD6-result").innerHTML = responseText + "("+rollCounter+")"
+			}
 
 			async function addTwoIntegers() {
 				const x = document.getElementById("x-value").value
