--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 	<p>This is an HTML, CSS, and JavaScript MERNa web client. To test your MERNa server, enter your 
 	MERNa sever URL below and press test connection button.</p>
 
-	<label for="urlInput">MERNa Server URL:</label><br />
+	<label for="urlInput">MERNa Server URL: https://node-dice-roller-inclass-g3b7f5hbf4b4c4hk.centralus-01.azurewebsites.net/</label><br />
 	<input type="text" id="urlInput" placeholder="Enter the URL of your remote MERNa server here..."><br /><br />
 
-	<button onclick="testMERNaServerConnection()">Test MERNa Server Connection</button>
+	<button onclick="testMERNaServerConnection()">Connect to Dice Roller Server</button>
 	<div id="ping"></div><br /><br />
 
 	<script>
@@ -55,27 +55,7 @@
 		<br><br>
 
 		<button type="button" onclick="fetchRollD6()">Roll D6</button>
-		<div id="fetch-rollD6-result"></div>
-		<br><br>
-
-		Add two integers on the Node.js server.<br />
-		<select onchange="addTwoIntegers()" id="x-value">
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>100</option>
-		</select> +
-
-		<select onchange="addTwoIntegers()" id="y-value">
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>100</option>
-		</select> = 
-		<input id="sum" disabled></input><br /><br /><br />
-
-		<button type="button" onclick="calculateBMI()">Calculate BMI</button>
-		<div id="bmi-result"></div>
+		<img id="fetch-rollD6-result" alt="Roll D6 Result" style="max-width: 500px; margin-top: 20px;">
 		<br><br>
 
 		<script>
@@ -90,61 +70,12 @@
 
 			let rollCounter = 0
 			async function fetchRollD6() {
-				rollCounter++
 				const url = document.getElementById("urlInput").value + "/rollD6";
 				const response = await fetch(url)
-				const responseText = await response.text()
-				document.getElementById("fetch-rollD6-result").innerHTML = responseText + "("+rollCounter+")"
-			}
-
-			async function addTwoIntegers() {
-				const x = document.getElementById("x-value").value
-				const y = document.getElementById("y-value").value
-
-				// Note the URL (fetch) string will look something like '/add-two-integers?x=2&y=1' when it is sent.
-				const url = document.getElementById("urlInput").value
-				const fetchString = url+"/add-two-integers?x="+x+"&y="+y
-				const response = await fetch(fetchString)
-				const responseText = await response.text()
-				document.getElementById("sum").value = responseText
-			}
-
-			async function calculateBMI() {
-				// Approximate height and weight for a man in the US. 
-				const url = document.getElementById("urlInput").value;
-				const fetchString = url+'/calculate-bmi?feet=5&inches=10&lbs=186';
-				const response = await fetch(fetchString)
-				const responseText = await response.text()
-				console.log(responseText)
-				document.getElementById("bmi-result").innerHTML = responseText
-			}
-		</script>
-
-		<button onclick="fetchBatman()">Batman</button>
-		<div id="batmanJSON">Batman JSON</div><br /><br />
-		<script>
-			async function fetchBatman() {
-				const url = document.getElementById("urlInput").value + "/batman";
-				const response = await fetch(url);
-				const batmanResponse = await response.json();
-
-				const batmanJSONField = document.getElementById("batmanJSON");
-				const batmanResponseText = "<pre>"+JSON.stringify(batmanResponse, null, 4)+"</pre"
-				batmanJSONField.innerHTML = batmanResponseText
-			}
-		</script>
-
-		<button onclick="testFavoritePlaces()">Favorite Places</button>
-		<div id="favoritePlacesJSON">Favorite Places JSON</div><br /><br />
-		<script>
-			async function testFavoritePlaces() {
-				const url = document.getElementById("urlInput").value + "/api/favorite-places";
-				const response = await fetch(url);
-				const places = await response.json();
-
-				const favoritePlacesJSONField = document.getElementById("favoritePlacesJSON");
-				const favoritePlacesText = "<pre>"+JSON.stringify(places, null, 4)+"</pre"
-				favoritePlacesJSONField.innerHTML = favoritePlacesText
+				const responseBlob = await response.blob()
+				const imageUrl = URL.createObjectURL(responseBlob)
+				const imgElement = document.getElementById("fetch-rollD6-result");
+				imgElement.src = imageUrl
 			}
 		</script>
 	</div>
