cleaned up client side

--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>MERNa Web</title>
+    <title>Client Dice Roller</title>
 	<style>
 		#urlInput {
             width: 500px; 
             padding: 10px;
             font-size: 14px;
-        }
-        #favoritePlacesJSON, #batmanJSON {
-            padding: 20px;
-            background-color: lightgray;
-            margin-top: 20px;
         }
 		#testingDiv {
             display: none;
@@ -20,9 +15,7 @@
     </style>
 </head>
 <body>
-	<h1>MERNa Web Application</h1>
-	<p>This is an HTML, CSS, and JavaScript MERNa web client. To test your MERNa server, enter your 
-	MERNa sever URL below and press test connection button.</p>
+	<h1>Client side of Gabe Carlson's Dice Roller</h1>
 
 	<label for="urlInput">MERNa Server URL: https://node-dice-roller-inclass-g3b7f5hbf4b4c4hk.centralus-01.azurewebsites.net/</label><br />
 	<input type="text" id="urlInput" placeholder="Enter the URL of your remote MERNa server here..."><br /><br />
